[gd_scene load_steps=12 format=3 uid="uid://c6qonp7irftka"]

[ext_resource type="Script" uid="uid://dp8hrxr6qtenc" path="res://scripts/upgrade_panel.gd" id="1_gpneo"]
[ext_resource type="LabelSettings" uid="uid://ntonssx3tctc" path="res://custom_fonts/Lavel_48_Black.tres" id="1_lbfta"]
[ext_resource type="FontFile" uid="uid://c568h3rhi8wdo" path="res://assets/Fonts/DINPro-Bold.otf" id="2_blifv"]
[ext_resource type="Texture2D" uid="uid://f21enrtoroa7" path="res://assets/Sprites/UI/star.png" id="3_3gobj"]
[ext_resource type="Texture2D" uid="uid://do1b40tfqg775" path="res://assets/Sprites/UI/coin_gold.png" id="4_blifv"]
[ext_resource type="Texture2D" uid="uid://b3k8f1phw75i1" path="res://assets/Sprites/UI/contrast.png" id="5_3gobj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gpneo"]
bg_color = Color(0.756271, 0.8595, 0.85818, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e5sd7"]
font = ExtResource("2_blifv")
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug2qy"]
bg_color = Color(0.815471, 0.80893, 0.742878, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xr4iy"]
bg_color = Color(0.241659, 0.318918, 0.337083, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5sd7"]
bg_color = Color(0.476194, 0.670636, 0.363987, 1)

[node name="UpgradePanel" type="Control"]
custom_minimum_size = Vector2(550, 650)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1370.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpneo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gpneo")

[node name="LevelLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 20.0
offset_right = 77.5
offset_bottom = 82.0
grow_horizontal = 2
text = "Level 1"
label_settings = ExtResource("1_lbfta")

[node name="ItemNameLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = 105.0
offset_right = 127.0
offset_bottom = 288.0
grow_horizontal = 2
text = "COFFEE
"
label_settings = SubResource("LabelSettings_e5sd7")

[node name="StarHBox" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 90.0
offset_top = 204.0
offset_right = 458.0
offset_bottom = 324.0

[node name="Star_1" type="TextureRect" parent="Panel/StarHBox"]
modulate = Color(0.289707, 0.328894, 0.313814, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_3gobj")
expand_mode = 1
stretch_mode = 5

[node name="Star_2" type="TextureRect" parent="Panel/StarHBox"]
modulate = Color(0.289707, 0.328894, 0.313814, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_3gobj")
expand_mode = 1
stretch_mode = 5

[node name="Star_3" type="TextureRect" parent="Panel/StarHBox"]
modulate = Color(0.289707, 0.328894, 0.313814, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_3gobj")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 36)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ug2qy")
theme_override_styles/fill = SubResource("StyleBoxFlat_xr4iy")
max_value = 1.0
value = 0.56
show_percentage = false

[node name="ProfitHBox" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = 73.0
offset_right = -125.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Panel/ProfitHBox"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_blifv")
expand_mode = 1
stretch_mode = 5

[node name="ProfitLabel" type="Label" parent="Panel/ProfitHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = ExtResource("1_lbfta")

[node name="TimeHBox" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = 73.0
offset_right = 219.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Panel/TimeHBox"]
modulate = Color(0.243137, 0.317647, 0.337255, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("5_3gobj")
expand_mode = 1
stretch_mode = 5

[node name="CookTime" type="Label" parent="Panel/TimeHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "10s"
label_settings = ExtResource("1_lbfta")

[node name="UpgradeButton" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 115)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -159.0
offset_right = 150.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_blifv")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_e5sd7")
text = "50"

[connection signal="pressed" from="Panel/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
